# graphics_framework

./: CMakeLists.txt  GraphicalFramework.sln  SimpleGraphicalFramework.sln
DrawLoop/: DrawLoop.vcxproj  DrawLoop.vcxproj.filters  main.cpp
DrawLoop/Debug/: DrawLoop.exe.recipe  quad.obj.enc  vc142.idb
DrawLoop/Debug/DrawLoop.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DrawLoop/framework/: ProgramInputHandler.h
DrawLoop/framework/draw_objects/: Drawable.h  Figure.cpp  Figure.h  Primitive.cpp  Primitive.h  Quad.h
Framework/: ButtonHandler.cpp  ButtonHandler.h  DrawLoop.vcxproj  DrawLoop.vcxproj.filters  Program.h  ProgramInputHandler.cpp  ProgramInputHandler.h  Renderer.cpp  Renderer.h  SphericalCamera.cpp  SphericalCamera.h  main.cpp
Framework/2d_objects/: Grid2D.cpp  Grid2D.h
Framework/basic_3d_objects/: AxisObject.h  Cube.h  Dodecahedron.h  Sphere.h  Surface.h  TexturedSphere.cpp  TexturedSphere.h
Framework/draw_objects/: Camera.cpp  Camera.h  Drawable.h  Figure2D.cpp  Figure2D.h  LightSource.h  NormalMapped.cpp  NormalMapped.h  NormalPrimitives.cpp  NormalPrimitives.h  Object3D.cpp  Object3D.h  Texture.cpp  Texture.h  TexturedObject3d.cpp  TexturedObject3d.h  VertexPrimitives.cpp  VertexPrimitives.h
Framework/draw_objects/primitives/: Line.cpp  Line.h  Primitive.cpp  Primitive.h  Quad.cpp  Quad.h  Triangle.cpp  Triangle.h  TriangleFan.cpp  TriangleFan.h
Framework/framework/: ButtonHandler.cpp  ButtonHandler.h  Program.h  ProgramFramework.h  ProgramInputHandler.cpp  ProgramInputHandler.h  Renderer.cpp  Renderer.h
Framework/framework/2d_objects/: Grid2D.cpp  Grid2D.h
Framework/framework/basic_3d_objects/: AxisObject.h  Cube.h  Dodecahedron.h  Sphere.h  Surface.h
Framework/framework/draw_objects/: Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  Figure2D.cpp  Figure2D.h  Line.cpp  Object3D.cpp  Object3D.h  Primitive.cpp  Primitive.h  TriangleFan.cpp  TriangleFan.h
Framework/shaders/: lighting_shaders.shader  main_shaders.shader  texture_lighting_shaders.shader
Framework/test_programs/: Test2DObject.h  Test3DObject.h
Programs/: Programs.vcxproj  Programs.vcxproj.filters  main.cpp
Programs/programs_source/: GridVisualization.cpp  GridVisualization.h  ProgramMultipleObjects.cpp  ProgramMultipleObjects.h  SpaceMetricGrid.cpp  SpaceMetricGrid.h  Test2DObject.h  Test3DObject.h
Programs/programs_source/gravity_simulation/: ConsoleDisplay.cpp  ConsoleDisplay.h  SimulateGravityProgram.h  Simulation.cpp  Simulation.h  SimulationProgram.cpp  SimulationProgram.h  TestMoveObject.h  UniverseConstants.h  gravity_main.cpp
Programs/programs_source/gravity_simulation/objects/: CelestialBody.cpp  CelestialBody.h  Displayable.h  GravityObject.cpp  GravityObject.h
Programs/programs_source/gravity_simulation/vector_editor/: VectorFigure.cpp  VectorFigure.h  VectorSelector.cpp  VectorSelector.h
Programs/programs_source/lab3_lighting/: LightingLab3.cpp  LightingLab3.h  lab3_main.cpp
Test/: Test2DObject.h  Test3DObject.h  TestNormals.h  test_main.cpp
Vector/: Vector.vcxproj  Vector.vcxproj.filters  test_vector.cpp
Vector/Debug/: Vector.exe.recipe  vc142.idb
Vector/Debug/Vector.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Vector.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Vector/source/: Vector3.cpp  Vector3.h
programs/: GridVisualization.cpp  GridVisualization.h  Lab2_3d_objects.cpp  ProgramMultipleObjects.cpp  Test2DObject.h  Test3DObject.h
